# Khronicle

./: ARCHITECTURE.md  CMakeLists.txt  CODE.md  CONTRIBUTING.md  EVOLUTION.md  FUTURE.md  GOVERNANCE.md  INVARIANTS.md  LOGGING.md  README.md  SCENARIOS.md  STABILITY.md  SYSTEMS-ARCHITECTURE.md  TRUTH-MODEL.md
packaging/: PKGBUILD  khronicle.install
resources/desktop/: khronicle-tray.desktop  khronicle.desktop
resources/systemd/: khronicle-daemon.service  khronicle-tray.service
scenarios/: README.md
scenarios/example-bug-1/: notes.md  scenario.json
src/common/: enums.hpp  json_utils.hpp  khronicle_version.hpp  logging.cpp  logging.hpp  models.hpp  process_utils.cpp  process_utils.hpp
src/daemon/: change_explainer.cpp  change_explainer.hpp  counterfactual.cpp  counterfactual.hpp  journal_parser.cpp  journal_parser.hpp  khronicle_api_server.cpp  khronicle_api_server.hpp  khronicle_daemon.cpp  khronicle_daemon.hpp  khronicle_store.cpp  khronicle_store.hpp  main.cpp  pacman_parser.cpp  pacman_parser.hpp  risk_classifier.cpp  risk_classifier.hpp  snapshot_builder.cpp  snapshot_builder.hpp  watch_engine.cpp  watch_engine.hpp
src/debug/: scenario_capture.cpp  scenario_capture.hpp
src/replay/: ReplayHarness.cpp  ReplayHarness.hpp  main.cpp
src/report/: ReportCli.cpp  ReportCli.hpp  main.cpp
src/tray/: KhronicleTray.cpp  KhronicleTray.hpp  main.cpp
src/ui/: main.cpp
src/ui/backend/: DaemonController.cpp  DaemonController.hpp  FleetModel.cpp  FleetModel.hpp  KhronicleApiClient.cpp  KhronicleApiClient.hpp  WatchClient.cpp  WatchClient.hpp
src/ui/qml/: DiffView.qml  EventCard.qml  FleetMain.qml  Main.qml  SnapshotSelector.qml  SummaryBar.qml  TimelineView.qml  WatchRulesPage.qml  WatchSignalsPage.qml  WatchpointsPage.qml
tests/: CMakeLists.txt  test_aggregate.cpp  test_api_server.cpp  test_diff.cpp  test_explainer.cpp  test_fleet_model.cpp  test_host_identity.cpp  test_journal_parser.cpp  test_logging.cpp  test_models_and_json.cpp  test_pacman_parser.cpp  test_replay.cpp  test_report_cli.cpp  test_risk_classifier.cpp  test_snapshot_builder.cpp  test_store.cpp  test_temporal.cpp  test_temporal_reasoning.cpp  test_watch_engine.cpp
